using k8s and istio types in manager-kontrol-api spec
